# CPT

./: .autocp  .clangd  .gitignore  .lldbinit  .template.cpp  CMakeLists.txt  LICENSE  README.md  reset  template.cpp
.github/workflows/: verify.yml  verify_fast.yml  verify_sanitize.yml
bits/: stdc++.h
formatters/: stdarray.py  unionfind.py
source/: .template.cpp  CMakeLists.txt  solution.py  template.cpp  testcases.py
tests/: AhoCorasick.test.cpp  FastRMQ.test.cpp  FenwickSet.test.cpp  FenwickTree.test.cpp  LCA.test.cpp  LSTree.test.cpp  NetworkSimplex.test.cpp  PushTreap.test.cpp  SegmentTree.test.cpp  SparseTable.test.cpp  Treap.test.cpp  TwoSat.test.cpp  TwoSat_cses.test.cpp  TwoSat_short.test.cpp  UnionFind.test.cpp  and_convolution.test.cpp  closest_pair.test.cpp  config.toml  config_sanitize.toml  convex_hull.test.cpp  factor.test.cpp  factorize.test.cpp  gcd_convolution.test.cpp  interpolate.test.cpp  is_prime.test.cpp  ntt.test.cpp  scc.test.cpp  sieve.test.cpp  successful.test.cpp  tec.test.cpp  xor_convolution.test.cpp
tests/manual/: TwoSat_cses.test.cpp
utils/: .clangd  CMakeLists.txt  algos.cpp  geometry.cpp  macros.h  mistakes.txt  modular.cpp  primes.cpp  strings.cpp  traversal.cpp  treap.cpp  trees.cpp
utils/data structures/: AddMultisetHash.cpp  ColorUnionFind.cpp  Compress.cpp  FastRMQ.cpp  FenwickSet.cpp  FenwickTree.cpp  HeavyLight.cpp  LSTree.cpp  MStack.cpp  PushTreap.cpp  RangeFenwickTree.cpp  Rollback.cpp  SegTree.cpp  SegTreeL.cpp  SegmentTree.cpp  SparseTable.cpp  SqrtTree.cpp  UnionFind.cpp  UpdateSegmentTree.cpp  hash.cpp  inverseSegTree.cpp  liChaoTree.cpp  orderTree.cpp  persistreap.cpp  rollingHash.cpp  treap.cpp  trie.cpp  xorBasis.cpp
utils/geometry/: Angle.cpp  Point3D.cpp  closest_pair.cpp  complex.cpp  complex.txt  convexHull.cpp  convex_hull.cpp  floating.cpp  integer.cpp  line_intersection.cpp  minkowski.cpp  minkowskiSum.cpp  on_segment.cpp  project.cpp  reflect.cpp  side.cpp
utils/graph/: CostFlow.cpp  LCA.cpp  NetworkSimplex.cpp  TwoSat.cpp  TwoSat_short.cpp  bfs.cpp  centroid.cpp  centroids.cpp  dense_dijkstra.cpp  dijkstra.cpp  dinic.cpp  eulerTours.cpp  floydWarshall.cpp  grid.cpp  reroot.cpp  scc.cpp  short_dijkstra.cpp  tec.cpp  topoSort.cpp  twoEdgeComps.cpp
utils/notes/: lookinto.txt  mistakes.txt  pragmas.cpp  stlhelp.txt  techniques.txt
utils/numerical/: 17ify.cpp  combinatorics.cpp  compress.cpp  convolutions.cpp  crt.cpp  disjoint_or_convolution.cpp  exponentiate.cpp  factor.cpp  factorize.cpp  fft.cpp  fftMod.cpp  gcdConvolve.cpp  gss.cpp  interpolate.cpp  is_prime.cpp  lattice_attack.py  linearRecurrence.cpp  longDivision.cpp  long_division.cpp  mo.cpp  nextLarger.cpp  next_larger.cpp  ntt.cpp  pollardRho.cpp  powerSum.cpp  primes.cpp  random.cpp  sieve.cpp  sos.cpp  ternarySearch.cpp  totient.cpp
utils/old/: algos.cpp  geometry.cpp  primes.cpp  strings.cpp  traversal.cpp  trees.cpp
utils/strings/: ahoCorasick.cpp  manacher.cpp  trie.cpp
utils/types/: frac.cpp  infinum.cpp  matrix.cpp  mint.cpp  modular.cpp
